--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "ignoreCommand": "",
-  "functions": {
-    "api/**": {
-      "runtime": "edge"
-    }
-  },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/" }
