--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --open"
+    "preview": "vite preview --open",
+    "build-vercel": "vite build",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
