--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "allowImportingTsExtensions": true,
     "types": ["vite/client", "node"]
   },
