--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@vercel/node": "^5.3.24",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.4.5",
     "vite": "^5.4.6"
