--- a/package.json
+++ b/package.json
@@ -11,15 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --open",
-    "build-vercel": "vite build",
-    "vercel-build": "vite build",
-    "start": "node server.js",
-    "backend": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "mongodb": "^6.3.0"
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -50,12 +42,9 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
-    "cors": "^2.8.5",
     "embla-carousel-react": "^8.6.0",
-    "express": "^5.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
-    "mongodb": "^6.20.0",
     "msw": "^2.11.3",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
